Fix button contrast

--- a/_sass/layout/_buttons.scss
+++ b/_sass/layout/_buttons.scss
@@ -17,7 +17,7 @@
   font-weight: bold;
   text-align: center;
   text-decoration: none;
-  background-color: var(--global-base-color);
+  background-color: var(--global-bg-color);
   border: 0 !important;
   border-radius: $border-radius;
   cursor: pointer;
