--- a/_sass/theme/_default.scss
+++ b/_sass/theme/_default.scss
@@ -30,7 +30,7 @@ $sidebar-screen-min-width   : 1024px;
 :root {
     --global-base-color                 : #{$green};
     --global-bg-color                   : #F5F7F3;
-    --global-footer-bg-color            : #{$darker-green};
+    --global-footer-bg-color            : #F5F7F3;
     --global-border-color               : #{$lighter-green};
     --global-dark-border-color          : #{$darker-green};
     --global-code-background-color      : #E8EDEA;
